Changed footer menu accordion

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="prestige-favicon.svg" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
+
+    <script src="js/script.js" defer></script>
   </head>
 
   <body>
@@ -119,12 +121,23 @@
 
     <!-- ZAČIATOK: HLAVNÝ OBSAH -->
     <div class="main-content">
+      <!-- <div class="slider" aria-hidden="true">
+        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
+        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
+        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
+        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
+        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
+      </div> -->
       <div class="slider" aria-hidden="true">
-        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
-        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
-        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
-        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
-        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
+        <p>Complimentary Shipping on All Products | Complimentary Exchange of Goods Within 60 Days</p>
+        <p>Complimentary Shipping on All Products | Complimentary Exchange of Goods Within 60 Days</p>
+        <p>Complimentary Shipping on All Products | Complimentary Exchange of Goods Within 60 Days</p>
+        <p>Complimentary Shipping on All Products | Complimentary Exchange of Goods Within 60 Days</p>
+        <p>Complimentary Shipping on All Products | Complimentary Exchange of Goods Within 60 Days</p>
+        <p>Complimentary Shipping on All Products | Complimentary Exchange of Goods Within 60 Days</p>
+        <p>Complimentary Shipping on All Products | Complimentary Exchange of Goods Within 60 Days</p>
+        <p>Complimentary Shipping on All Products | Complimentary Exchange of Goods Within 60 Days</p>
+        <p>Complimentary Shipping on All Products | Complimentary Exchange of Goods Within 60 Days</p>
       </div>
 
       <a href="index.html">
@@ -236,7 +249,7 @@
 
       <div class="footer-content-tablet-mobile">
         <div>
-          <input type="checkbox" name="newsletter" id="section-1" class="accordion-input" />
+          <input type="checkbox" name="accordion" id="section-1" class="accordion-input" />
           <label for="section-1" class="accordion-label">Newsletter</label>
 
           <div class="accordion-content">
@@ -247,7 +260,7 @@
         </div>
 
         <div>
-          <input type="checkbox" name="client services" id="section-2" class="accordion-input" />
+          <input type="checkbox" name="accordion" id="section-2" class="accordion-input" />
           <label for="section-2" class="accordion-label">Client Services</label>
 
           <div class="accordion-content">
@@ -262,7 +275,7 @@
         </div>
 
         <div>
-          <input type="checkbox" name="the company" id="section-3" class="accordion-input" />
+          <input type="checkbox" name="accordion" id="section-3" class="accordion-input" />
           <label for="section-3" class="accordion-label">The Company</label>
 
           <div class="accordion-content">
@@ -277,7 +290,7 @@
         </div>
 
         <div>
-          <input type="checkbox" name="connect" id="section-4" class="accordion-input" />
+          <input type="checkbox" name="accordion" id="section-4" class="accordion-input" />
           <label for="section-4" class="accordion-label">Connect</label>
 
           <div class="accordion-content">
@@ -290,7 +303,7 @@
         </div>
 
         <div>
-          <input type="checkbox" name="boutiques" id="section-5" class="accordion-input" />
+          <input type="checkbox" name="accordion" id="section-5" class="accordion-input" />
           <label for="section-5" class="accordion-label">Boutiques</label>
 
           <div class="accordion-content">
@@ -303,7 +316,7 @@
         </div>
 
         <div>
-          <input type="checkbox" name="contact us" id="section-6" class="accordion-input" />
+          <input type="checkbox" name="accordion" id="section-6" class="accordion-input" />
           <label for="section-6" class="accordion-label">Contact Us</label>
 
           <div class="accordion-content">
